--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "app_co",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "^13.12.0",
+    "yarn": "^1.22.4",
+    "npm": "^6.14.4"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "autoprefixer": "^9.8.3",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
@@ -15,6 +21,7 @@
     "mysql": "^2.18.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
     "react-css-modules": "^4.7.11",
     "react-dom": "^16.13.1",
     "react-paginate": "^6.3.2",
@@ -24,11 +31,13 @@
     "react-scripts": "3.4.1",
     "react-vis": "^1.11.7",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": " react-scripts start",
+    "build": " react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -37,18 +46,18 @@
   },
   "browserslist": {
     "production": [
+      "since 2010",
       ">0.2%",
       "not dead",
       "not op_mini all"
     ],
     "development": [
+      "since 2010",
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "ie 8-11",
+      "ie 11"
     ]
-  },
-  "devDependencies": {
-    "@babel/preset-react": "^7.10.1",
-    "babel-cli": "^6.26.0"
   }
 }
