--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "^13.12.0",
-    "yarn": "^1.22.4",
-    "npm": "^6.14.4"
+    "node": "13.12.0",
+    "yarn": "1.22.4",
+    "npm": "6.14.4"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.6",
