--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "engines": {
     "node": "13.12.0",
-    "yarn": "1.22.4",
-    "npm": "6.14.4"
+    "yarn": "^1.22.4",
+    "npm": "^6.14.4"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.6",
@@ -36,10 +36,10 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve -s build",
-    "build": "react-scripts build",
-    "heroku-postbuild": "npm run build"
+    "start": " react-scripts start",
+    "build": " react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
